starting to add games to the html

--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
             }
         </style>
     </head>
-    <ubText>Hello in Ubuntu!</ubText>
+    <body>
+        <h1>some games i stole ig</h1>
+        <ubText>
+            <a href="/msgweb-assets-main/1/index.docx">1</a>
+            <br><a href="/msgweb-assets-main/2048/index.docx">2048</a>
+        </ubText>
+    </body>
 </html>
