--- a/index.html
+++ b/index.html
@@ -17,6 +17,40 @@
         <ubText>
             <a href="/msgweb-assets-main/1/index.docx">1</a>
             <br><a href="/msgweb-assets-main/2048/index.docx">2048</a>
+            <br><a href="/msgweb-assets-main/among-us/index.docx">Among Us</a>
+            <br><a href="/msgweb-assets-main/bloonstd/index.docx">Bloons TD</a>
+            <br><a href="/msgweb-assets-main/bloonstd2/index.docx">Bloons TD 2</a>
+            <br><a href="/msgweb-assets-main/circlo/index.docx">Circlo</a>
+            <br><a href="/msgweb-assets-main/cluster-rush/index.docx">Cluster Rush</a>
+            <br><a href="/msgweb-assets-main/cookie-clicker/index.docx">Cookie Clicker</a>
+            <br><a href="/msgweb-assets-main/cookiemath-main/index.docx">Cookie Clicker (alt)</a>
+            <br><a href="/msgweb-assets-main/ctr-holiday/index.docx">Cut the Rope: Holiday</a>
+            <br><a href="/msgweb-assets-main/ctr-tr/index.docx">Cut the Rope: Time Travel</a>
+            <br><a href="/msgweb-assets-main/ctr/index.docx">Cut the Rope</a>
+            <br><a href="/msgweb-assets-main/deal-or-no-deal/index.docx">Deal or No Deal</a>
+            <br><a href="/msgweb-assets-main/drift-boss/index.docx">Drift Boss</a>
+            <br><a href="/msgweb-assets-main/ducklife1/index.docx">Duck Life 1</a>
+            <br><a href="/msgweb-assets-main/ducklife2/index.docx">Duck Life 2</a>
+            <br><a href="/msgweb-assets-main/ducklife3/index.docx">Duck Life 3</a>
+            <br><a href="/msgweb-assets-main/ducklife4/index.docx">Duck Life 4</a>
+            <br><a href="/msgweb-assets-main/fireboywatergirlforesttemple/index.docx">Fireboy and Watergirl: Forest Temple</a>
+            <br><a href="/msgweb-assets-main/flappybird/index.docx">Flappy Bird</a>
+            <br><a href="/msgweb-assets-main/geodash/index.docx">Geometry Dash: Scratch</a>
+            <br><a href="/msgweb-assets-main/idle-breakout/index.docx">Idle Breakout</a>
+            <br><a href="/msgweb-assets-main/impossiblequiz/index.docx">Impossible Quiz</a>
+            <br><a href="/msgweb-assets-main/jetpack-joyride/index.docx">Jetpack Joyride</a>
+            <br><a href="/msgweb-assets-main/learntofly/index.docx">Learn to Fly</a>
+            <br><a href="/msgweb-assets-main/learntofly2/index.docx">Learn 2 Fly</a>
+            <br><a href="/msgweb-assets-main/motox3m-pool/index.docx">Moto X3M: Pool</a>
+            <br><a href="/msgweb-assets-main/motox3m-spooky/index.docx">Moto X3M: Spooky</a>
+            <br><a href="/msgweb-assets-main/motox3m-winter/index.docx">Moto X3M: Winter</a>
+            <br><a href="/msgweb-assets-main/motox3m/index.docx">Moto X3M</a>
+            <br><a href="/msgweb-assets-main/motox3m2/index.docx">Moto X3M 2</a>
+            <br><a href="/msgweb-assets-main/slope/index.docx">Slope</a>
+            <br><a href="/msgweb-assets-main/stealingthediamond/index.docx">Stealing the Diamond</a>
+            <br><a href="/msgweb-assets-main/temple-run-2/index.docx">Temple Run 2</a>
+            <br><a href="/msgweb-assets-main/wordle/index.docx">Wordle</a>
+            <br><a href="/msgweb-assets-main/you-are-bezos/index.docx">You Are Bezos</a>
         </ubText>
     </body>
 </html>
