--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+        <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
         <style>
             ubText {
                 font-family: "Ubuntu", sans-serif;
@@ -17,40 +18,38 @@
         <ubText>
             <a href="/msgweb-assets-main/1/index.html">1</a>
             <br><a href="/msgweb-assets-main/2048/index.html">2048</a>
-            <br><a href="/msgweb-assets-main/among-us/index.html">Among Us</a>
-            <br><a href="/msgweb-assets-main/bloonstd/index.html">Bloons TD</a>
-            <br><a href="/msgweb-assets-main/bloonstd2/index.html">Bloons TD 2</a>
-            <br><a href="/msgweb-assets-main/circlo/index.html">Circlo</a>
-            <br><a href="/msgweb-assets-main/cluster-rush/index.html">Cluster Rush</a>
-            <br><a href="/msgweb-assets-main/cookie-clicker/index.html">Cookie Clicker</a>
-            <br><a href="/msgweb-assets-main/cookiemath-main/index.html">Cookie Clicker (alt)</a>
-            <br><a href="/msgweb-assets-main/ctr-holiday/index.html">Cut the Rope: Holiday</a>
-            <br><a href="/msgweb-assets-main/ctr-tr/index.html">Cut the Rope: Time Travel</a>
-            <br><a href="/msgweb-assets-main/ctr/index.html">Cut the Rope</a>
-            <br><a href="/msgweb-assets-main/deal-or-no-deal/index.html">Deal or No Deal</a>
-            <br><a href="/msgweb-assets-main/drift-boss/index.html">Drift Boss</a>
-            <br><a href="/msgweb-assets-main/ducklife1/index.html">Duck Life 1</a>
-            <br><a href="/msgweb-assets-main/ducklife2/index.html">Duck Life 2</a>
-            <br><a href="/msgweb-assets-main/ducklife3/index.html">Duck Life 3</a>
-            <br><a href="/msgweb-assets-main/ducklife4/index.html">Duck Life 4</a>
-            <br><a href="/msgweb-assets-main/fireboywatergirlforesttemple/index.html">Fireboy and Watergirl: Forest Temple</a>
-            <br><a href="/msgweb-assets-main/flappybird/index.html">Flappy Bird</a>
-            <br><a href="/msgweb-assets-main/geodash/index.html">Geometry Dash: Scratch</a>
-            <br><a href="/msgweb-assets-main/idle-breakout/index.html">Idle Breakout</a>
-            <br><a href="/msgweb-assets-main/impossiblequiz/index.html">Impossible Quiz</a>
-            <br><a href="/msgweb-assets-main/jetpack-joyride/index.html">Jetpack Joyride</a>
-            <br><a href="/msgweb-assets-main/learntofly/index.html">Learn to Fly</a>
-            <br><a href="/msgweb-assets-main/learntofly2/index.html">Learn 2 Fly</a>
-            <br><a href="/msgweb-assets-main/motox3m-pool/index.html">Moto X3M: Pool</a>
-            <br><a href="/msgweb-assets-main/motox3m-spooky/index.html">Moto X3M: Spooky</a>
-            <br><a href="/msgweb-assets-main/motox3m-winter/index.html">Moto X3M: Winter</a>
-            <br><a href="/msgweb-assets-main/motox3m/index.html">Moto X3M</a>
-            <br><a href="/msgweb-assets-main/motox3m2/index.html">Moto X3M 2</a>
-            <br><a href="/msgweb-assets-main/slope/index.html">Slope</a>
-            <br><a href="/msgweb-assets-main/stealingthediamond/index.html">Stealing the Diamond</a>
-            <br><a href="/msgweb-assets-main/temple-run-2/index.html">Temple Run 2</a>
-            <br><a href="/msgweb-assets-main/wordle/index.html">Wordle</a>
-            <br><a href="/msgweb-assets-main/you-are-bezos/index.html">You Are Bezos</a>
+            <br><a href="/ruffle/ruffle.html?game=/flashfiles/bloons-tower-defense-5.swf">Bloons TD 5</a>
+            <br><a href="/msgweb-assets-main/circlo/index.html">Circlo <!--not working--></a>
+            <br><a href="/msgweb-assets-main/cluster-rush/index.html">Cluster Rush <!--not working--></a>
+            <br><a href="/msgweb-assets-main/cookie-clicker/index.html">Cookie Clicker <!--not working--></a>
+            <br><a href="/msgweb-assets-main/cookiemath-main/index.html">Cookie Clicker (alt) <!--not working--></a>
+            <br><a href="/msgweb-assets-main/ctr-holiday/index.html">Cut the Rope: Holiday <!--not working--></a>
+            <br><a href="/msgweb-assets-main/ctr-tr/index.html">Cut the Rope: Time Travel <!--not working--></a>
+            <br><a href="/msgweb-assets-main/ctr/index.html">Cut the Rope <!--not working--></a>
+            <br><a href="/msgweb-assets-main/deal-or-no-deal/index.html">Deal or No Deal <!--not working--></a>
+            <br><a href="/msgweb-assets-main/drift-boss/index.html">Drift Boss <!--not working--></a>
+            <br><a href="/msgweb-assets-main/ducklife1/index.html">Duck Life 1 <!--not working--></a>
+            <br><a href="/msgweb-assets-main/ducklife2/index.html">Duck Life 2 <!--not working--></a>
+            <br><a href="/msgweb-assets-main/ducklife3/index.html">Duck Life 3 <!--not working--></a>
+            <br><a href="/msgweb-assets-main/ducklife4/index.html">Duck Life 4 <!--not working--></a>
+            <br><a href="/msgweb-assets-main/fireboywatergirlforesttemple/index.html">Fireboy and Watergirl: Forest Temple <!--not working--></a>
+            <br><a href="/msgweb-assets-main/flappybird/index.html">Flappy Bird <!--not working--></a>
+            <br><a href="/msgweb-assets-main/geodash/index.html">Geometry Dash: Scratch <!--not working--></a>
+            <br><a href="/msgweb-assets-main/idle-breakout/index.html">Idle Breakout <!--not working--></a>
+            <br><a href="/msgweb-assets-main/impossiblequiz/index.html">Impossible Quiz <!--not working--></a>
+            <br><a href="/msgweb-assets-main/jetpack-joyride/index.html">Jetpack Joyride <!--not working--></a>
+            <br><a href="/msgweb-assets-main/learntofly/index.html">Learn to Fly <!--not working--></a>
+            <br><a href="/msgweb-assets-main/learntofly2/index.html">Learn 2 Fly <!--not working--></a>
+            <br><a href="/msgweb-assets-main/motox3m-pool/index.html">Moto X3M: Pool <!--not working--></a>
+            <br><a href="/msgweb-assets-main/motox3m-spooky/index.html">Moto X3M: Spooky <!--not working--></a>
+            <br><a href="/msgweb-assets-main/motox3m-winter/index.html">Moto X3M: Winter <!--not working--></a>
+            <br><a href="/msgweb-assets-main/motox3m/index.html">Moto X3M <!--not working--></a>
+            <br><a href="/msgweb-assets-main/motox3m2/index.html">Moto X3M 2 <!--not working--></a>
+            <br><a href="/msgweb-assets-main/slope/index.html">Slope <!--not working--></a>
+            <br><a href="/msgweb-assets-main/stealingthediamond/index.html">Stealing the Diamond <!--not working--></a>
+            <br><a href="/msgweb-assets-main/temple-run-2/index.html">Temple Run 2 <!--not working--></a>
+            <br><a href="/msgweb-assets-main/wordle/index.html">Wordle <!--not working--></a>
+            <br><a href="/msgweb-assets-main/you-are-bezos/index.html">You Are Bezos <!--not working--></a>
         </ubText>
     </body>
 </html>
