--- a/ruffle/ruffle.html
+++ b/ruffle/ruffle.html
@@ -30,12 +30,11 @@
                 container.appendChild(player);
             });
 
-			player.style.width = w;
-			player.style.height = h;
-
 			player.load({
 				url: game,
 				allowScriptAccess: false,
+				width: w,
+				height: h,
 			});
         </script>
     </body>
