--- a/ruffle/ruffle.html
+++ b/ruffle/ruffle.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
-        <title>fstk5's games -- ruffle</title>
-		<script></script>
-    </head>
+	<head>
+		<title>fstk5's games -- ruffle</title>
+	</head>
+
     <body>
+		<div id="container"></div>
         <script src="/ruffle/ruffle-nightly-2024_05_22-web-selfhosted/ruffle.js">
 			var w = window.innerWidth;
 			var h = window.innerHeight;
