--- a/404.html
+++ b/404.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
 <html>
-  <head>
-  </head>
-  <body>
-    <h1>Error 404 Page Not Found</h1>
-  </body>
+    <head>
+    	<title>fstk5's games -- 404</title>
+    </head>
+  	<body>
+    	<h1>Error 404 Page Not Found</h1>
+  	</body>
 </html>
