--- a/ruffle/ruffle.html
+++ b/ruffle/ruffle.html
@@ -2,10 +2,11 @@
 <html>
 	<head>
 		<title>fstk5's games -- ruffle</title>
-    <script src="/ruffle/ruffle-nightly-2024_05_22-web-selfhosted/ruffle.js"></script>
+    <script src="/ruffle-nightly-2024_05_22-web-selfhosted/ruffle.js"></script>
 	</head>
 
     <body>
+		<div id='ruffle' class="gameloc"></div>
         <script>
 			var w = browser.innerWidth;
 			var h = browser.innerHeight;
@@ -23,6 +24,6 @@
           
             var game = getQueryVariable("game");
         </script>
-		<script id = "gabe">swfobject.embedSWF("../ruffle-example/flashfiles/1on1soccer.swf", 'ruffle', 800, 600);</script>
+		<script id = "gabe">swfobject.embedSWF(game, 'ruffle', h, w);</script>
     </body>
 </html>
