--- a/ruffle/ruffle.html
+++ b/ruffle/ruffle.html
@@ -24,6 +24,6 @@
           
             var game = getQueryVariable("game");
         </script>
-		<script id = "gabe">swfobject.embedSWF(game, 'ruffle', h, w);</script>
+		<script id='ruffle'>swfobject.embedSWF(game, 'ruffle', h, w);</script>
     </body>
 </html>
