oh yeah (commiting so i can switch to vs code insiders)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
-        <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
         <style>
             ubText {
                 font-family: "Ubuntu", sans-serif;
@@ -19,7 +18,9 @@
         <ubText>
             <a href="/msgweb-assets-main/1/index.html">1</a>
             <br><a href="/msgweb-assets-main/2048/index.html">2048</a>
-            <br><a href="/ruffle/ruffle.html?game=/flashfiles/bloons-tower-defense-5.swf">Bloons TD 5</a>
+            <br><a href="/flashfiles/btd/btd.html">Bloons TD</a>
+            <br><a href="/flashfiles/btd2/btd2.html">Bloons TD 2</a>
+            <br><a href="/flashfiles/btd5/btd5.html">Bloons TD 5</a>
             <br><a href="/msgweb-assets-main/circlo/index.html">Circlo <!--not working--></a>
             <br><a href="/msgweb-assets-main/cluster-rush/index.html">Cluster Rush <!--not working--></a>
             <br><a href="/msgweb-assets-main/cookie-clicker/index.html">Cookie Clicker <!--not working--></a>
