adding stuff to ask for help

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     </head>
     <body>
         <h1>some games i stole ig</h1>
+        <h2>WARNING -- Most games are not working, only ones working rn are 1-BTD5. If you want to help find any of these games, text me at 6198233309 or email me at surfluke19@gmail.com</h2>
         <ubText>
-            <a href="/msgweb-assets-main/1/index.html">1</a>
+            <br><a href="/msgweb-assets-main/1/index.html">1</a>
             <br><a href="/msgweb-assets-main/2048/index.html">2048</a>
             <br><a href="/flashfiles/btd/btd.html">Bloons TD</a>
             <br><a href="/flashfiles/btd2/btd2.html">Bloons TD 2</a>
