--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
             <br><a href="/flashfiles/btd/btd.html">Bloons TD</a>
             <br><a href="/flashfiles/btd2/btd2.html">Bloons TD 2</a>
             <br><a href="/flashfiles/btd5/btd5.html">Bloons TD 5</a>
-            <br><a href="/msgweb-assets-main/circlo/index.html">Circlo <!--not working--></a>
-            <br><a href="/msgweb-assets-main/cluster-rush/index.html">Cluster Rush <!--not working--></a>
+            <br><a href="/msgweb-assets-main/cluster-rush/index.html">Cluster Rush</a>
             <br><a href="/msgweb-assets-main/cookie-clicker/index.html">Cookie Clicker <!--not working--></a>
             <br><a href="/msgweb-assets-main/cookiemath-main/index.html">Cookie Clicker (alt) <!--not working--></a>
             <br><a href="/msgweb-assets-main/ctr-holiday/index.html">Cut the Rope: Holiday <!--not working--></a>
