clockin out for the night

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <h1>some games i stole ig</h1>
-        <h2>WARNING -- Most games are not working, only ones working rn are 1-BTD5. If you want to help find any of these games, text me at 6198233309 or email me at surfluke19@gmail.com</h2>
+        <ubText><h3>Friend me on <a href="https://steamcommunity.com/id/fstk5/">Steam!</a></h3></ubText>
         <ubText>
             <br><a href="/msgweb-assets-main/1/index.html">1</a>
             <br><a href="/msgweb-assets-main/2048/index.html">2048</a>
