create dev branch

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </style>
     </head>
     <body>
-        <h1>some games i stole ig</h1>
+        <h1>some games i stole ig -- Development]</h1>
         <ubText><h3>Friend me on <a href="https://steamcommunity.com/id/fstk5/">Steam!</a></h3></ubText>
         <ubText>
             <br><a href="/msgweb-assets-main/1/index.html">1</a>
